Begin interactive, minor whitepaper updates

--- a/whitepaper/revnet.tex
+++ b/whitepaper/revnet.tex
@@ -112,7 +112,7 @@ Unless $r_f$ is 0, as more \$tokens are destroyed (in other words, the larger $x
   \caption{This figure shows price floor functions with price floor curves of 0\%, 33\%, 66\%, and 100\% $(r_f = 0, 0.33, 0.66, 1)$. The $x$ axis represents the percentage of the total \$token supply being destroyed, and the $y$ axis represents the percentage of the network's ETH which is reclaimed. Note that with a 0\% price floor curve $(r_f = 0)$, reclaim amounts scale linearly with respect to the number of tokens being destroyed---a network participant which destroys 1\% of the total token supply receives 1\% of the network's ETH. The larger the price floor curve $r_f$, the less ETH earlier reclaimers receive.}
 \end{figure}
 
-For a participant to maximize their financial return under the shareholder value model, they must ``time the market'', selling their equity in a company at the time when the market considers it to be most valuable. This may not line up with the company's intrinsic value, as markets frequently overvalue or undervalue companies based on social trends, investor hype, and other extrinsic factors. In contrast, \textit{the greatest loss a participant can incur under a Revnet model is the difference between the price ceiling and price floor at the time they purchase \$tokens}. As \$tokens are created or destroyed, the price floor will continue to rise. Participants do not have to worry about the value of their tokens going to zero, and in most cases, to maximize their return, they only have to continue holding their tokens. It is far easier for participants to be ``rational market actors'' under a Revnet model, encouraging long-term participation.
+For a participant to maximize their financial return under the shareholder value model, they must ``time the market'', selling their equity in a company at the time when the market considers it to be most valuable. This may not line up with the company's intrinsic value, as markets frequently overvalue or undervalue companies based on social trends, investor hype, and other extrinsic factors. In contrast, \textit{the greatest loss a participant can incur under a Revnet model is the difference between the price ceiling and price floor at the time they purchase \$tokens}. As \$tokens are created or destroyed, the price floor will continue to rise. Participants do not have to worry about the value of their tokens going to zero, and in most cases, to maximize their return, they only have to continue holding their tokens. Revnets make it easier for participants to be ``rational market actors''.
 
 \section{Applications}
 
@@ -136,7 +136,7 @@ Revnet tokens adhere to the \texttt{ERC20Votes} standard, meaning they can be us
 
 \subsection{Gated Networks}
 
-Ethereum wallets offer straightforward sign-in support for web applications, making Revnets a strong fit for token-gated platforms. Since participants have access to the growth of a Revnet-driven platform, they're more likely to use the platform and recommend it to others. This is a major advantage for platforms which rely on user-generated content:
+Ethereum wallets offer straightforward sign-in support for web applications, making Revnets a strong fit for token-gated platforms. Since participants have access to the growth of a Revnet-driven platform, they're more likely to use the platform and recommend it to others. This is a major advantage for platforms which rely on user-generated content.
 
 \begin{table}[h]
   \centering
@@ -151,6 +151,7 @@ Ethereum wallets offer straightforward sign-in support for web applications, mak
     \hline DeFi platforms which rely on user liquidity. & Uniswap, Compound, and Stargate. \\
     \hline
   \end{tabular}
+  \caption{Types of platforms which rely on user-generated content and current examples.}
 \end{table}
 
 All else being equal, users are more likely to put value into a platform which allows them to receive a portion of future growth over one which doesn't. Community ownership also prevents the platform from switching to a more extractive business model once it achieves scale, a frequent misalignment between users and platforms. Individual content creator can also deploy Revnets, and allow token holders to access exclusive material. Content creators can also use token voting to guide the direction of future projects.
